--- a/Index.html
+++ b/Index.html
@@ -2,13 +2,13 @@
 <html>
 <head>
   <title>Meu Site - Minerando Produtos</title>
-  <link rel="stylesheet" href="css/csssiteindex.css">
+  <link rel="stylesheet" href="csssiteindex.css">
 </head>
 <body>
   <div class="container">
     <!-- Cabeçalho -->
     <div class="header">
-      <img src="D:\Downloads\Meusite02\imagens\logoachadinho pnj.png" alt="logoachadinho pnj.png" class="logo">
+      <img src="D:\Downloads\Meusite02\imagens\logoachadinho%pnj.png" alt="logoachadinho pnj.png" class="logo">
       <div class="search-bar">
         <input type="text" placeholder="Pesquisar">
       </div>
