--- a/Index.html
+++ b/Index.html
@@ -8,7 +8,7 @@
   <div class="container">
     <!-- Cabeçalho -->
     <div class="header">
-      <img src="D:\Downloads\Meusite02\imagens\logoachadinho%pnj.png" alt="logoachadinho pnj.png" class="logo">
+      <img src="D:\Downloads\Meusite02\imagens\logoachadinho pnj.png" alt="logoachadinho pnj.png" class="logo">
       <div class="search-bar">
         <input type="text" placeholder="Pesquisar">
       </div>
